...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Knb-dS-CHg">
                                                            <rect key="frame" x="331" y="8" width="36" height="35"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="35" id="MHY-dR-UaN"/>
                                                                <constraint firstAttribute="width" constant="36" id="OzP-0S-zU0"/>
                                                            </constraints>
                                                            <state key="normal" image="settings"/>
                                                            <connections>
                                                                <segue destination="GKs-rz-POa" kind="presentation" identifier="Settings" id="GJu-gY-Dsb"/>
                                                            </connections>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Up-P8-umN">
                                                            <rect key="frame" x="8" y="11" width="23" height="29"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d1p-fe-huS">
                                                    <rect key="frame" x="329" y="19" width="30" height="30"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="30" id="39k-mg-X2w"/>
                                                        <constraint firstAttribute="height" constant="30" id="ruc-WQ-7Xd"/>
                                                    </constraints>
                                                    <state key="normal" image="save"/>
                                                    <connections>
                                                        <action selector="savePressed:" destination="GKs-rz-POa" eventType="touchUpInside" id="UHa-ih-5h1"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <color key="backgroundColor" red="0.74473947286605835" green="0.87272173166275024" blue="0.99357014894485474" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JNl-4E-SoA">
                                                    <rect key="frame" x="172" y="138" width="30" height="30"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="30" id="8fs-G1-ZDI"/>
                                                        <constraint firstAttribute="height" constant="30" id="Byk-94-xYg"/>
                                                    </constraints>
                                                    <state key="normal" title="Edit"/>
                                                    <connections>
                                                        <action selector="editPicturePressed:" destination="GKs-rz-POa" eventType="touchUpInside" id="Cmt-3G-FCY"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
                                        <rect key="frame" x="0.0" y="313" width="375" height="168"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vgH-S7-plc" id="wsN-1r-o2E">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="167.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Bio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SwP-4Z-PXF">
                                                    <rect key="frame" x="16" y="11" width="54" height="21"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="21" id="iRL-FY-YAd"/>
                                                        <constraint firstAttribute="width" constant="54" id="mWJ-NK-YOJ"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="15"/>
...
