...
                    <items>
                        <navigationItem title="Create Bubble" id="cH8-Qh-YQ3">
                            <barButtonItem key="leftBarButtonItem" style="plain" id="oRk-0g-nw8">
                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="YtY-QJ-hNi">
                                    <rect key="frame" x="16" y="7" width="83" height="30"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <state key="normal" title="Cancel"/>
                                </button>
                            </barButtonItem>
                            <barButtonItem key="rightBarButtonItem" style="plain" id="HNA-M4-Vdb">
                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="AvG-4Y-EK3">
                                    <rect key="frame" x="276" y="7" width="83" height="30"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
