...
                                <color key="backgroundColor" red="0.4238105714" green="0.58958220480000001" blue="0.82358044389999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="O9k-Pf-EdQ"/>
                                    <constraint firstAttribute="width" constant="78" id="sRd-XD-odG"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <state key="normal" title="Profile">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
